<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.detail.DetailActivity">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="136dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_avatar"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toStartOf="@id/tv_repository"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_name"
        style="@style/TextView.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        app:layout_constraintStart_toStartOf="@id/iv_avatar"
        app:layout_constraintTop_toBottomOf="@id/iv_avatar"
        tools:text="@string/name" />

    <TextView
        android:id="@+id/tv_username"
        style="@style/TextView.Subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintStart_toStartOf="@id/tv_name"
        app:layout_constraintTop_toBottomOf="@id/tv_name"
        tools:text="@string/username" />

    <TextView
        android:id="@+id/tv_company"
        style="@style/TextView.Subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:drawablePadding="8dp"
        app:drawableStartCompat="@drawable/ic_company"
        app:layout_constraintStart_toStartOf="@id/tv_username"
        app:layout_constraintTop_toBottomOf="@id/tv_username"
        tools:text="@string/company" />

    <TextView
        android:id="@+id/tv_location"
        style="@style/TextView.Subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:drawablePadding="8dp"
        app:drawableStartCompat="@drawable/ic_location"
        app:layout_constraintStart_toStartOf="@id/tv_company"
        app:layout_constraintTop_toBottomOf="@id/tv_company"
        tools:text="@string/location" />

    <TextView
        android:id="@+id/tv_repository"
        style="@style/TextView.Subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="8dp"
        android:text="@string/repository"
        app:layout_constraintEnd_toStartOf="@id/tv_followers"
        app:layout_constraintStart_toEndOf="@id/iv_avatar"
        app:layout_constraintTop_toBottomOf="@id/tv_total_repository" />

    <TextView
        android:id="@+id/tv_total_repository"
        style="@style/TextView.Subtitle.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@id/tv_repository"
        app:layout_constraintStart_toStartOf="@id/tv_repository"
        app:layout_constraintTop_toTopOf="@id/iv_avatar"
        tools:text="0" />

    <TextView
        android:id="@+id/tv_followers"
        style="@style/TextView.Subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="8dp"
        android:text="@string/followers"
        app:layout_constraintEnd_toStartOf="@id/tv_following"
        app:layout_constraintStart_toEndOf="@id/tv_repository"
        app:layout_constraintTop_toBottomOf="@id/tv_total_followers" />

    <TextView
        android:id="@+id/tv_total_followers"
        style="@style/TextView.Subtitle.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/tv_followers"
        app:layout_constraintStart_toStartOf="@id/tv_followers"
        app:layout_constraintTop_toTopOf="@id/tv_total_repository"
        tools:text="1" />

    <TextView
        android:id="@+id/tv_following"
        style="@style/TextView.Subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/following"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_followers"
        app:layout_constraintTop_toBottomOf="@id/tv_total_following" />

    <TextView
        android:id="@+id/tv_total_following"
        style="@style/TextView.Subtitle.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/tv_following"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@id/tv_following"
        app:layout_constraintTop_toTopOf="@id/tv_total_followers"
        tools:text="2" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/favorites"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_favorite_border"
        app:tint="@color/red" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_location"
        app:tabSelectedTextColor="?android:textColorPrimary"
        app:tabTextColor="@android:color/darker_gray" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tabs" />

</androidx.constraintlayout.widget.ConstraintLayout>